透明化のための外部ライブラリを変更

--- a/DoclikeMac/MainWindow.xaml
+++ b/DoclikeMac/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:f="clr-namespace:FluentWpfChromes;assembly=FluentWpfChromes"
         xmlns:local="clr-namespace:DoclikeMac"
         mc:Ignorable="d"
         Title="MainWindow"
@@ -18,5 +19,10 @@
         MouseLeave="Window_MouseLeave"
         >
 
-    <Grid></Grid>
+    <f:AcrylicChrome.AcrylicChrome>
+        <f:AcrylicChrome/>
+    </f:AcrylicChrome.AcrylicChrome>
+    <Grid>
+        <TextBlock Text="activate maclikedoc" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF16E9CC"></TextBlock>
+    </Grid>
 </Window>
