--- a/DoclikeMac/MainWindow.xaml
+++ b/DoclikeMac/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow"
         Height="80"
-        Width="800"
+        Width="80"
         WindowStyle="None"
         Background="#CFEFF6FF"
         AllowsTransparency="True"
@@ -19,7 +19,6 @@
         MouseLeave="Window_MouseLeave" ShowInTaskbar="False"
         >
 
-    <Grid>
-        <TextBlock Text="activate maclikedoc" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF16E9CC" ></TextBlock>
+    <Grid x:Name="iconList">
     </Grid>
 </Window>
