--- a/DoclikeMac/FolderDock.xaml
+++ b/DoclikeMac/FolderDock.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DoclikeMac"
         mc:Ignorable="d"
-        Title="FolderDock" Height="450" Width="800" Activated="Window_Activated">
+        Title="FolderDock" Height="450" Width="800" Activated="Window_Activated" Topmost="True" ShowInTaskbar="False" Closed="Window_Closed">
     <Grid>
         <TextBlock x:Name="dockInfo" FontSize="14"></TextBlock> 
     </Grid>
