--- a/DoclikeMac/MainWindow.xaml
+++ b/DoclikeMac/MainWindow.xaml
@@ -15,14 +15,14 @@
         Visibility="Visible"
         DpiChanged="Window_DpiChanged"
         MouseEnter="Window_MouseEnter"
-        MouseLeave="Window_MouseLeave" ShowInTaskbar="False" Topmost="True">
+        MouseLeave="Window_MouseLeave" ShowInTaskbar="False" Topmost="True" DragEnter="Window_DragEnter" DragLeave="Window_DragLeave" DragOver="Window_DragOver" Drop="Window_Drop">
 
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="44" />
         </Grid.ColumnDefinitions>
-        <Grid x:Name="iconList" Margin="12,12,9,8" Background="#BFFFFFFF" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" AllowDrop="True" DragOver="IconList_DragOver" Drop="IconList_Drop" DragEnter="IconList_DragEnter" DragLeave="IconList_DragLeave" />
+        <Grid x:Name="iconList" Margin="12,12,9,8" Background="#BFFFFFFF" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" AllowDrop="True" />
         <Button x:Name="openButton" Content="open" Grid.Column="1" Margin="0,63,0,4" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Century" Click="OpenButton_Click" FontWeight="Bold" />
         <Button x:Name="lockButton" Content="unlock" Grid.Column="1" Margin="0,42,0,25" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Century" Click="LockButton_Click" FontWeight="Bold" />
         <Button x:Name="editButton" Content="edit" Grid.Column="1" Margin="0,21,0,46" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Century" Click="EditButton_Click" FontWeight="Bold" />
