--- a/DoclikeMac/FolderDock.xaml
+++ b/DoclikeMac/FolderDock.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="DoclikeMac.FolderDock"
+﻿<Window x:Class="DocklikeMac.FolderDock"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DoclikeMac"
+        xmlns:local="clr-namespace:DocklikeMac"
         mc:Ignorable="d"
         Title="FolderDock" Height="450" Width="800" Activated="Window_Activated" Topmost="True" ShowInTaskbar="False" Closed="Window_Closed">
     <Grid>
