--- a/DoclikeMac/MainWindow.xaml
+++ b/DoclikeMac/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="DoclikeMac.MainWindow"
+﻿<Window x:Class="DocklikeMac.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:tb="http://www.hardcodet.net/taskbar"
-        xmlns:local="clr-namespace:DoclikeMac"
+        xmlns:local="clr-namespace:DocklikeMac"
         mc:Ignorable="d"
         Height="88"
         Width="110"
