--- a/DoclikeMac/MainWindow.xaml
+++ b/DoclikeMac/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:DocklikeMac"
         mc:Ignorable="d"
         WindowStyle="None"
-        Title="MainWindow" Height="100" Width="100" Topmost="True" ResizeMode="NoResize" Icon="/Resources/TaskIcon.ico">
+        Title="" Height="10" Width="10" Topmost="True" ResizeMode="NoResize" Icon="/Resources/TaskIcon.ico">
     <tb:TaskbarIcon IconSource="/Resources/TaskIcon.ico" ToolTipText="DockLikeMac">
         <tb:TaskbarIcon.ContextMenu>
             <ContextMenu>
