--- a/DoclikeMac/AppDock.xaml
+++ b/DoclikeMac/AppDock.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DocklikeMac"
         mc:Ignorable="d"
-        Height="88"
+        Height="95"
         Width="110"
         WindowStyle="None"
         Background="#8C2F59F0"
@@ -17,12 +17,12 @@
 
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition />
             <ColumnDefinition Width="44" />
         </Grid.ColumnDefinitions>
-        <Grid x:Name="iconList" Margin="12,12,10,2" Background="#BFFFFFFF" AllowDrop="True" MouseMove="IconList_MouseMove" MouseLeftButtonUp="IconList_MouseLeftButtonUp" />
-        <Button x:Name="openButton" Content="open" Grid.Column="1" Margin="0,63,0,2" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Yu Gothic UI" Click="OpenButton_Click" FontWeight="Bold" />
-        <Button x:Name="lockButton" Content="unlock" Grid.Column="1" Margin="0,41,0,25" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Yu Gothic UI" Click="LockButton_Click" FontWeight="Bold" />
-        <Button x:Name="editButton" Content="edit" Grid.Column="1" Margin="0,18,0,47" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Yu Gothic UI" Click="EditButton_Click" FontWeight="Bold" />
+        <Grid x:Name="iconList" Margin="10,5,10,4" Background="#BFFFFFFF" AllowDrop="True" MouseMove="IconList_MouseMove" MouseLeftButtonUp="IconList_MouseLeftButtonUp" />
+        <Button x:Name="openButton" Content="open" Grid.Column="1" Margin="0,63,0,10" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Yu Gothic UI" Click="OpenButton_Click" FontWeight="Bold" RenderTransformOrigin="0.587,1.008" />
+        <Button x:Name="lockButton" Content="unlock" Grid.Column="1" Margin="0,41,0,32" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Yu Gothic UI" Click="LockButton_Click" FontWeight="Bold" />
+        <Button x:Name="editButton" Content="edit" Grid.Column="1" Margin="0,21,0,54" BorderBrush="#FFD6FF1D" Background="#FF9D9AE3" FontSize="12" FontFamily="Yu Gothic UI" Click="EditButton_Click" FontWeight="Bold" />
     </Grid>
 </Window>
